There is a problem with the setup

--- a/config.ini
+++ b/config.ini
@@ -3,13 +3,13 @@ ip: 10.1.0.232
 database: clock_data
 user: monitor
 password: monitor
+tablename = clock_measurements
 
 [data]
 path: C:\\test2.dat
 
 [sources]
-list: 
-	Cs1 
+list: Cs1 
 	Cs5 
 	Cs7 
 	Cs8 
@@ -32,10 +32,11 @@ list:
 	GPS_ref_KG1
 	GPS_ref_KG2
 
+# Beware! The "," between elements in list is used during SQØ
+# SQL query building. This is not nice, but works.
 [columns]
-list:
-	date 
-	time 
-	mjd 
-	source	
+list: date, 
+	time, 
+	mjd, 
+	source,	
 	value
