Major breakthrough. Date stilled bugged

--- a/config.ini
+++ b/config.ini
@@ -4,6 +4,9 @@ database: clock_data
 user: monitor
 password: monitor
 tablename = clock_measurements
+autocommit = True
+get_warnings = True
+
 
 [data]
 path: C:\\test2.dat
@@ -32,7 +35,7 @@ list: Cs1
 	GPS_ref_KG1
 	GPS_ref_KG2
 
-# Beware! The "," between elements in list is used during SQØ
+# Beware! The "," between elements in list is used during
 # SQL query building. This is not nice, but works.
 [columns]
 list: date, 
