--- a/config.ini
+++ b/config.ini
@@ -8,7 +8,7 @@ autocommit = True
 get_warnings = True
 
 [data]
-path: C:\\test2.dat
+path: C:\\Kontinuerlig 57240 - 57299.dat
 
 [sources]
 list: Cs1 
