--- a/config.ini
+++ b/config.ini
@@ -5,12 +5,14 @@ user: monitor
 password: monitor
 tablename = clock_measurements
 autocommit = True
-get_warnings = True
+get_warnings = True 
 
 [data]
-folder: C:\\test\
+folder: C:\test\
 file_prefix : Kontinuerlig
 path: C:\\test2.dat
+ref_clock :
+measurererID : 
 
 [sources]
 list: Cs1 
