Only service left

--- a/config.ini
+++ b/config.ini
@@ -8,11 +8,17 @@ autocommit = True
 get_warnings = True 
 
 [data]
-folder: C:\test\
+ref_clock : Someclock
+measurerID : Aril
+
+[files]
+folder: C:/test/
 file_prefix : Kontinuerlig
-path: C:\\test2.dat
-ref_clock :
-measurererID : 
+insert_mode_path: C:\\test2.dat
+
+[modes]
+file_insert: 0
+are_you_sure_you_want_to_insert: 0
 
 [sources]
 list: Cs1 
@@ -45,4 +51,6 @@ list: date,
 	time, 
 	mjd, 
 	source,	
-	value
+	value,
+	ref_clock,
+	measurerID
