Changed some names and gave up the service thinht

--- a/config.ini
+++ b/config.ini
@@ -17,8 +17,11 @@ file_prefix : Kontinuerlig
 insert_mode_path: C:\\test2.dat
 
 [modes]
-file_insert: 0
-are_you_sure_you_want_to_insert: 0
+file_insert: no
+
+[logs]
+enabled: yes
+path: log.txt
 
 [sources]
 list: Cs1 
