--- a/config.ini
+++ b/config.ini
@@ -1,18 +1,9 @@
-[db]
-ip: 10.1.0.96
-database: clock_data
-user: monitor
-password: monitor
-tablename = clock_measurements
-autocommit = True
-get_warnings = True 
-
 [data]
 ref_clock : Someclock
 measurerID : Aril
 
 [files]
-folder: C:/test/
+folder: C:\
 file_prefix : Kontinuerlig
 insert_mode_path: C:\\test2.dat
 
@@ -22,6 +13,20 @@ file_insert: no
 [logs]
 enabled: yes
 path: log.txt
+
+[general]
+interval = 20
+
+### Should not be changed:
+
+[db]
+ip: 10.1.0.96
+database: clock_data
+user: monitor
+password: monitor
+tablename = clock_measurements
+autocommit = True
+get_warnings = True 
 
 [sources]
 list: Cs1 
