--- a/config.ini
+++ b/config.ini
@@ -11,8 +11,8 @@ insert_mode_path: C:\\test2.dat
 file_insert: no
 
 [logs]
-enabled: yes
-path: log.txt
+enable_logging: yes
+log_path: log.txt
 
 [general]
 interval = 20
