Optimized, insertion 50 times faster!

--- a/config.ini
+++ b/config.ini
@@ -5,10 +5,10 @@ measurerID : Aril
 [files]
 folder: C:\
 file_prefix : Kontinuerlig
-insert_mode_path: C:\\test2.dat
+insert_mode_path: C:\\test\Kontinuerlig 57174 - 57204.dat
 
 [modes]
-file_insert: no
+file_insert: yes
 
 [logs]
 enable_logging: yes
