--- a/config.ini
+++ b/config.ini
@@ -8,7 +8,7 @@ file_prefix : Kontinuerlig
 insert_mode_path: C:\\test\Kontinuerlig 57174 - 57204.dat
 
 [modes]
-file_insert: yes
+file_insert: no
 
 [logs]
 enable_logging: yes
