Used someone elses PID code and tuned it a little. Noise in gps really shows on the result though

--- a/unik4430/notes/assignment2.ini
+++ b/unik4430/notes/assignment2.ini
@@ -2,8 +2,9 @@
 ### It's probably way overkill, but it's alot easier this way.
 
 [files]
-file1: ..\Exercises\GPSDO\data\gps.dat 
-file2: ..\Exercises\GPSDO\data\ocxo.dat
+gps: ..\Exercises\GPSDO\data\gps-no-offset.dat
+ocxo: ..\Exercises\GPSDO\data\ocxo.dat
+gps_avg: .\gps_average
 
 [logs]
 enable_logging: no
