added some files, fiddling with PID

--- a/unik4430/notes/assignment2.ini
+++ b/unik4430/notes/assignment2.ini
@@ -2,9 +2,13 @@
 ### It's probably way overkill, but it's alot easier this way.
 
 [files]
-gps: ..\Exercises\GPSDO\data\gps-no-offset.dat
-ocxo: ..\Exercises\GPSDO\data\ocxo.dat
-gps_avg: .\gps_average
+gps: ..\Exercises\GPSDO\data\gps.dat
+gps_no_offset_1: ..\Exercises\GPSDO\data\gps-no-offset.dat
+gps_dropped: ..\Exercises\GPSDO\data\gps_dropped.txt
+ocxo_1: ..\Exercises\GPSDO\data\ocxo.dat
+xcsac_60: ..\Exercises\GPSDO\data\xcsac.dat
+gps_60: ..\Exercises\GPSDO\data\xGPS-60s.dat
+ocxo_60: ..\Exercises\GPSDO\data\xOCXO-60s.dat
 
 [logs]
 enable_logging: no
