Converted code from P3.4 to P2.7. It is currently only a skeleton, but seems to work with the database. Minimal of error handling

--- a/sensor_script/config.ini
+++ b/sensor_script/config.ini
@@ -10,7 +10,7 @@ insert_mode_path: C:\\test\Kontinuerlig 57174 - 57204.dat
 file_insert: no
 
 [logs]
-enable_logging: yes
+enable_logging: no
 log_path: log.txt
 
 [general]
@@ -20,8 +20,9 @@ interval = 20
 
 [db]
 #ip: 10.1.0.96
-ip: 192.168.1.109
-database: gprmc
+ip: 127.0.0.1
+database: clock_data
+table: gprmc
 #user: monitor
 user: root
 password = sqlroot
