Script soon finished, got a bug in variation direction/checksum that needs some ironing out

--- a/sensor_script/config.ini
+++ b/sensor_script/config.ini
@@ -1,26 +1,10 @@
-[data]
-sensorID : 1
-
-[files]
-folder: C:\
-file_prefix : Kontinuerlig
-insert_mode_path: C:\\test\Kontinuerlig 57174 - 57204.dat
-
-[modes]
-file_insert: no
-
-[logs]
-enable_logging: no
-log_path: log.txt
-
 [general]
-interval = 20
+sensorID : 1
+interval : 20
 
 [gps]
 port: /dev/ttyAMA0
 baud: 9600
-
-### Should not be changed:
 
 [db]
 #ip: 10.1.0.96
@@ -31,6 +15,3 @@ table: gprmc
 user: root
 password = sqlroot
 #password: monitor
-tablename = clock_measurements
-autocommit = True
-get_warnings = True 
