gps_2_db ready for deployment

--- a/sensor_script/config.ini
+++ b/sensor_script/config.ini
@@ -7,11 +7,10 @@ port: /dev/ttyAMA0
 baud: 9600
 
 [db]
-#ip: 10.1.0.96
-ip: 127.0.0.1
+ip: 10.1.0.96
+#ip: 127.0.0.1
 database: clock_data
 table: gprmc
+#Remember to create a user in the DB!!
 #user: monitor
-user: root
-password = sqlroot
 #password: monitor
