Fixed a bug in date

--- a/sensor_script/config.ini
+++ b/sensor_script/config.ini
@@ -1,9 +1,9 @@
 [general]
 sensorID : 1
-discard_interval : 60
+discard_interval : 1
 
 [gps]
-port: /dev/ttyAMA0
+port: /dev/ttyACM0
 baud: 9600
 
 [db]
@@ -12,5 +12,5 @@ ip: 10.1.0.96
 database: clock_data
 table: gprmc
 #Remember to create a user in the DB!!
-#user: monitor
-#password: monitor
+user: gps
+password: gps
