Changed makefile, needed other switch to work with ARM arch

--- a/server/makefile
+++ b/server/makefile
@@ -5,7 +5,7 @@ CC = gcc
 DEBUG = -g
 
 CFLAGS = -Wall -c $(DEBUG) -std=gnu99 -pedantic -O2
-#CFLAGS = -Wall -c $(DEBUG) -march=armv7-a -mtune=arm7
+#CFLAGS = -Wall -c $(DEBUG) -march=armv7-a -mtune=arm7 -fsigned-char
 
 LFLAGS = -Wall $(DEBUG)
 
