Added error handling

--- a/justervesenet/gpib/config.ini
+++ b/justervesenet/gpib/config.ini
@@ -7,11 +7,13 @@ log_path: log.txt
 [db]
 ip: 10.1.0.96
 database: clock_data
-user: monitor
-password: monitor
+user: anyone
+password: anyone
 tablename = clock_measurements
 autocommit = True
-get_warnings = True 
+get_warnings = True
+# if connection_attempt_max < 1 : Infinite attempts
+connection_attempts_max = 0
 
 [sources]
 list: Cs1 
