Added GPIB connection routine and error handling

--- a/justervesenet/gpib/config.ini
+++ b/justervesenet/gpib/config.ini
@@ -15,6 +15,14 @@ get_warnings = True
 # if connection_attempt_max < 1 : Infinite attempts
 connection_attempts_max = 0
 
+[counter]
+# GPIB channel of counter (CNT-81)
+channel: 10
+# Name of CNT-81 in gpib.conf
+name: cnt-81
+# Name of GPIB config file
+gpib_conf_file: cnt-81.dat
+
 [sources]
 list: Cs1 
 	Cs5 
