Need an explanation on the GPIB config procedure

--- a/justervesenet/gpib/config.ini
+++ b/justervesenet/gpib/config.ini
@@ -21,7 +21,12 @@ channel: 10
 # Name of CNT-81 in gpib.conf
 name: cnt-81
 # Name of GPIB config file
-gpib_conf_file: cnt-81.dat
+device_gpib_conf: cnt81.dat.backup
+# Checksum of device_gpib_conf
+# If cnt81.dat is changed ON PURPOSE, update this checksum.
+device_gpib_conf_checksum: 2eb73959da27de5520bb7cd5fc26245d6352cf75
+# Quit on failed checksum
+quit_on_failed_checksum = no
 
 [sources]
 list: Cs1 
