Added a routine for checking the availability of the matrix switch

--- a/justervesenet/gpib/config.ini
+++ b/justervesenet/gpib/config.ini
@@ -18,8 +18,8 @@ connection_attempts_max = 0
 [counter]
 # GPIB channel of counter
 channel: 10
-# Name of counterin gpib.conf
-name: cnt-81
+# Name of counter in gpib.conf
+name: counter
 # Name of GPIB config file
 device_gpib_conf: counter.dat
 # Checksum of device_gpib_conf
@@ -27,6 +27,12 @@ device_gpib_conf: counter.dat
 device_gpib_conf_checksum: be357f3de631240794bb6b4572413927be5553e8
 # Quit on failed checksum
 quit_on_failed_checksum = no
+
+[matrix]
+# GPIB channel of counter
+channel: 11
+# Name of matrix in gpib.conf
+name: matrix
 
 [sources]
 list: Cs1 
