Added matrix_switch class and source list parsing

--- a/justervesenet/gpib/config.ini
+++ b/justervesenet/gpib/config.ini
@@ -1,8 +1,11 @@
-[logs]
-enable_logging: yes
-log_path: log.txt
-
-### Should not be changed:
+######################### NOTE ##################################
+# Any GPIG specific confiruation specified in this file is 		#
+# prioritized second to the /etc/gpio.conf. It's mostly meant 	#
+# as a fallback in case something is wrong with /etc/gpio.conf.	#
+# Please note that if /etc/gpio.conf is missing, you have far	# 
+# greater problems than just a missing config file, your gpib 	#
+# driver is also probably missing/incorrectly installed. 		#
+#################################################################
 
 [db]
 ip: 10.1.0.96
@@ -27,36 +30,32 @@ device_gpib_conf: counter.dat
 device_gpib_conf_checksum: be357f3de631240794bb6b4572413927be5553e8
 # Quit on failed checksum
 quit_on_failed_checksum = no
+# How many times to retry clear and reset commands
+cls_rst_retry_count: 5
 
 [matrix]
 # GPIB channel of counter
 channel: 11
 # Name of matrix in gpib.conf
 name: matrix
+# Number of ports
+num_of_ports: 11
 
 [sources]
-list: Cs1 
-	Cs5 
-	Cs7 
-	Cs8 
-	KG1 
-	KG2 
-	GPS 
-	GNSS1 
-	PHM-1 
-	Test-1 
-	Test-2 
-	Cs5_ref_KG1 
-	Cs5_ref_KG2
-	Cs7_ref_KG1 
-	Cs7_ref_KG2
-	Cs8_ref_KG1 
-	Cs8_ref_KG2 
-	KG1_ref_KG2
-	PHM-1_ref_KG1
-	PHM-1_ref_KG2
-	GPS_ref_KG1
-	GPS_ref_KG2
+# List of sources
+list: 	#Cs1,1 
+		#Cs5,2 
+		#Cs7,3 
+		#Cs8,4 
+		#KG1,5 
+		#KG2,6 
+		#GPS,7 
+		#GNSS1,8 
+		#PHM-1,9 
+		#Test-1,10 
+		#Test-2,11
+# Empty list retry time
+empty_list_retry: 5 
 
 # Beware! The "," between elements in list is used during
 # SQL query building. This is not nice, but works.
