--- a/justervesenet/gpib/config.ini
+++ b/justervesenet/gpib/config.ini
@@ -43,17 +43,17 @@ num_of_ports: 11
 
 [sources]
 # List of sources
-list: 	#Cs1,1 
-		#Cs5,2 
-		#Cs7,3 
-		#Cs8,4 
-		#KG1,5 
-		#KG2,6 
-		#GPS,7 
-		#GNSS1,8 
-		#PHM-1,9 
-		#Test-1,10 
-		#Test-2,11
+list: 	Cs1,1 
+		Cs5,2 
+		Cs7,3 
+		Cs8,4 
+		KG1,5 
+		KG2,6 
+		GPS,7 
+		GNSS1,8 
+		PHM-1,9 
+		Test-1,10 
+		Test-2,11
 # Empty list retry time
 empty_list_retry: 5 
 
