Added db upload, seems to work fine

--- a/justervesenet/gpib/config.ini
+++ b/justervesenet/gpib/config.ini
@@ -1,4 +1,4 @@
-######################### NOTE ##################################
+############################ NOTE ###############################
 # Any GPIG specific confiruation specified in this file is 		#
 # prioritized second to the /etc/gpio.conf. It's mostly meant 	#
 # as a fallback in case something is wrong with /etc/gpio.conf.	#
@@ -6,6 +6,10 @@
 # greater problems than just a missing config file, your gpib 	#
 # driver is also probably missing/incorrectly installed. 		#
 #################################################################
+
+[general]
+ref_clock: MockClock
+measurerID: lmmm
 
 [db]
 ip: 10.1.0.96
