Finished file dump

--- a/justervesenet/gpib/config.ini
+++ b/justervesenet/gpib/config.ini
@@ -10,6 +10,13 @@
 [general]
 ref_clock: MockClock
 measurerID: lmmm
+# Dump to file aswell as database
+dump_to_file: yes
+# Name of dump file 
+# NOTE! Date will be appended:
+# dump_01012016
+dump_file_name: lmmm_dump_
+
 
 [db]
 ip: 10.1.0.96
