Added dump folder

--- a/justervesenet/gpib/lmmm_config.ini
+++ b/justervesenet/gpib/lmmm_config.ini
@@ -16,6 +16,8 @@ dump_to_file: yes
 # NOTE! Date will be appended:
 # dump_01012016
 dump_file_name: lmmm_dump_
+# Where to put the dump files
+dump_dir: ./dumps/
 
 [db]
 ip: 10.1.0.96
