--- a/server/config.ini
+++ b/server/config.ini
@@ -3,6 +3,7 @@ max_clients: 10
 warm_up: 24000
 csac_serial_interface: /dev/ttyUSB0
 logging: 1
-log_path: server_log
+log_path: server_log.txt
 csac_logging: 1
-csac_log_path: csac_log
+csac_log_path: csac_log.txt
+cfd_state_path: cfd_state.txt
