--- a/server/config.ini
+++ b/server/config.ini
@@ -7,4 +7,7 @@ log_path: server_log.txt
 csac_logging: 1
 csac_log_path: csac_log.txt
 cfd_state_path: cfd_state.txt
-
+init_cfd_from_file: 0
+init_cfd_steer_smooth_current:
+init_cfd_steer_smooth_today:
+init_cfd_steer_smooth_yesterday:
