Removed CSAC filter config code from server and put it in csac_filter

--- a/server/makefile
+++ b/server/makefile
@@ -1,6 +1,5 @@
 SERVER_OBJS = sensor_server.o net.o utils.o session.o filters.o actions.o csac_filter.o
 CLIENT_OBJS = sensor_client.o net.o utils.o gps_serial.o
-CSAC_FILTER = csac_filter.o utils.o
 
 CC = gcc
 DEBUG = -g
@@ -21,16 +20,13 @@ server : $(SERVER_OBJS)
 client : $(CLIENT_OBJS)
 	$(CC) $(LFLAGS) $(CLIENT_OBJS) -o client
 
-cfilter : $(CSAC_FILTER)
-	$(CC) $(LFLAGS) $(CSAC_FILTER) -o cfilter
-
 sensor_server.o : sensor_server.h net.h sensor_server.c
 	$(CC) $(CFLAGS) sensor_server.c 
 
 sensor_client.o : sensor_client.h sensor_client.c
 	$(CC) $(CFLAGS) sensor_client.c
 
-csac_filter.o : csac_filter.c utils.h csac_filter.h
+csac_filter.o : csac_filter.h csac_filter.c utils.h sensor_server.h
 	$(CC) $(CFLAGS) csac_filter.c 
 
 net.o : net.h utils.h net.c 
