--- a/server/cfilter_config.ini
+++ b/server/cfilter_config.ini
@@ -2,6 +2,7 @@ cfd_state_path: cfd_state.txt
 init_cfd_from_file: 0
 init_cfd_steer_smooth_current:
 init_cfd_steer_smooth_today:
+init_cfd_steer_smooth_previous:
 init_cfd_steer_smooth_yesterday:
 phase_limit: 50
 steer_limit: 50
