Added even more to the appendix and styled some code

--- a/server/makefile
+++ b/server/makefile
@@ -9,7 +9,8 @@ CFLAGS = -Wall -Wextra -c -std=gnu99 -pedantic -O3
 cpu := $(shell uname -m)
 
 ifeq ($(cpu),armv7l)
-	CFLAGS = -Wall -Wextra -c -std=gnu99 -pedantic -O3 -march=armv7-a -mtune=arm7 -fsigned-char
+	CFLAGS = -Wall -Wextra -c -std=gnu99 -pedantic -O3
+	 		 -march=armv7-a -mtune=arm7 -fsigned-char
 endif
 
 LFLAGS = -Wall $(DEBUG)
