--- a/server/makefile
+++ b/server/makefile
@@ -9,7 +9,7 @@ CFLAGS = -Wall -Wextra -c -std=gnu99 -pedantic -O3
 cpu := $(shell uname -m)
 
 ifeq ($(cpu),armv7l)
-	CFLAGS = -Wall -Wextra -c -std=gnu99 -pedantic -O3 -march=armv7-a -mtune=arm7 -fsigned-char
+	CFLAGS = -Wall -Wextra -c -g -std=gnu99 -pedantic -O3 -march=armv7-a -mtune=arm7 -fsigned-char
 endif
 
 LFLAGS = -Wall $(DEBUG)
