--- a/server/cfilter_config.ini
+++ b/server/cfilter_config.ini
@@ -1,9 +1,12 @@
 cfd_state_path: cfd_state.txt
+telemetry_log: telemetry.txt
+pred_log_path: pred.txt
+log_predict: 0
 init_cfd_from_file: 0
-init_cfd_steer_smooth_current:
-init_cfd_steer_smooth_today:
-init_cfd_steer_smooth_previous:
-init_cfd_steer_smooth_yesterday:
+init_cfd_steer_smooth_current: 123
+init_cfd_steer_smooth_today: 123
+init_cfd_steer_smooth_previous: 123
+init_cfd_steer_smooth_yesterday: 123
 phase_limit: 50
 steer_limit: 50
 time_constant: 10000
