Moving csac filter code for testing

--- a/server/cfilter_config.ini
+++ b/server/cfilter_config.ini
@@ -12,3 +12,18 @@ steer_limit: 50
 time_constant: 10000
 warmup_days: 0
 pred_limit: 200
+
+#define CONFIG_CFD_PATH "cfd_state_path: "
+#define CONFIG_INIT_FROM_FILE "init_cfd_from_file: "
+#define CONFIG_TELEMETRY_LOG "telemetry_log: "
+#define CONFIG_LOG_PREDICTION "log_predict: "
+#define CONFIG_LOG_PRED_PATH "pred_log_path: "
+#define CONFIG_INIT_SSC "init_cfd_steer_smooth_current: "
+#define CONFIG_INIT_SST "init_cfd_steer_smooth_today: "
+#define CONFIG_INIT_SSP "init_cfd_steer_smooth_previous: "
+#define CONFIG_INIT_SSY "init_cfd_steer_smooth_yesterday: "
+#define CONFIG_PHASE_LIMIT "phase_limit: "
+#define CONFIG_STEER_LIMIT "steer_limit: "
+#define CONFIG_PRED_LIMIT "pred_limit: "
+#define CONFIG_TIME_CONSTANT "time_constant: "
+#define CONFIG_WARMUP_DAYS "warmup_days: "
